--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center / cover;
+  height: 100vh;
 }
 
 body * {
@@ -554,4 +555,14 @@ footer {
   text-align: center;
   font-size: 14px;
   opacity: 0.4;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
